@startuml
namespace recognitionadapterin {
    class KafkaAdapter << (S,Aquamarine) >> {
        - reader *kafka.Reader
        - imageAnalizerService portin.QueueImagePort

        + ReceiveImagesFromQueue() error

    }
}


"recognitionadapterin.KafkaAdapter" o-- "kafka.Reader"
"recognitionadapterin.KafkaAdapter" o-- "portin.QueueImagePort"

namespace recognitionadapterout {
    class FtpImageStorageAdapter << (S,Aquamarine) >> {
        - ftpDirectory string

        + SaveNotAuthorizedImage(image domain.Image) error
        + SaveAuthorizedImage(image domain.Image) error

    }
    class FtpImageStorageAdapterTest << (S,Aquamarine) >> {
        - ftpDirectory string

        + SaveNotAuthorizedImage(image domain.Image) error
        + SaveAuthorizedImage(image domain.Image) error

    }
    class RekoAdapter << (S,Aquamarine) >> {
        - bucket string
        - svc *rekognition.Rekognition

        - resultToAnalizedImage(result *rekognition.SearchFacesByImageOutput, image domain.Image) (*domain.AnalizedImage, error)

        + Recognize(image domain.Image) (*domain.AnalizedImage, error)

    }
    class RekoAdapterTest << (S,Aquamarine) >> {
        - bucket string
        - svc *rekognition.Rekognition

        + Recognize(image domain.Image) (*domain.AnalizedImage, error)

    }
    class SNSAdapter << (S,Aquamarine) >> {
        - svc *sns.SNS

        + NotifyInitializedSystem() error
        + NotifyUnauthorizedFace(notification domain.Notification) error

    }
    class SNSAdapterTest << (S,Aquamarine) >> {
        + NotifyUnauthorizedFace(notification domain.Notification) error
        + NotifyInitializedSystem() error

    }
    class TelegramAdapter << (S,Aquamarine) >> {
        - bot *telebot.v2.Bot

        + Recipient() string
        + NotifyInitializedSystem() error
        + NotifyUnauthorizedFace(notification domain.Notification) error

    }
}

"recognitionapplicationportout.ImageStoragePort" <|-- "recognitionadapterout.FtpImageStorageAdapter"
"recognitionapplicationportout.ImageStoragePort" <|-- "recognitionadapterout.FtpImageStorageAdapterTest"
"recognitionapplicationportout.ImageRecognitionPort" <|-- "recognitionadapterout.RekoAdapter"
"recognitionapplicationportout.ImageRecognitionPort" <|-- "recognitionadapterout.RekoAdapterTest"
"recognitionapplicationportout.NotificationPort" <|-- "recognitionadapterout.SNSAdapter"
"recognitionapplicationportout.NotificationPort" <|-- "recognitionadapterout.SNSAdapterTest"
"recognitionapplicationportout.NotificationPort" <|-- "recognitionadapterout.TelegramAdapter"

"recognitionadapterout.RekoAdapter" o-- "rekognition.Rekognition"
"recognitionadapterout.RekoAdapterTest" o-- "rekognition.Rekognition"
"recognitionadapterout.SNSAdapter" o-- "sns.SNS"
"recognitionadapterout.TelegramAdapter" o-- "telebot.v2.Bot"

namespace recognitionapplication {
    class ImageAnalizerService << (S,Aquamarine) >> {
        - analizeAdapter portout.ImageRecognitionPort
        - notificationAdapter portout.NotificationPort
        - imageStorageAdapter portout.ImageStoragePort
        - snsTopic string

        - createNotification(image domain.Image) domain.Notification

        + AnalizeImage(image domain.Image) (*domain.AnalizedImage, error)

    }
}

"recognitionapplicationportin.QueueImagePort" <|-- "recognitionapplication.ImageAnalizerService"

"recognitionapplication.ImageAnalizerService" o-- "portout.ImageRecognitionPort"
"recognitionapplication.ImageAnalizerService" o-- "portout.ImageStoragePort"
"recognitionapplication.ImageAnalizerService" o-- "portout.NotificationPort"

namespace recognitionapplicationportin {
    interface QueueImagePort  {
        + AnalizeImage(image domain.Image) (*domain.AnalizedImage, error)

    }
}



namespace recognitionapplicationportout {
    interface ImageRecognitionPort  {
        + Recognize(image domain.Image) (*domain.AnalizedImage, error)

    }
    interface ImageStoragePort  {
        + SaveAuthorizedImage(image domain.Image) error
        + SaveNotAuthorizedImage(image domain.Image) error

    }
    interface NotificationPort  {
        + NotifyUnauthorizedFace(notification domain.Notification) error
        + NotifyInitializedSystem() error

    }
}



@enduml
